[package]
name = "kos"
version = "0.1.0"
authors = ["kangxiaoning <kxnmei@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# the profile used for `cargo build`
[profile.dev]
# disable stack unwinding on panic
panic = "abort"

# the profile used for `cargo build --release`
[profile.release]
# disable stack unwinding on panic
panic = "abort"